crates/tree-sitter-vixen/grammar.js
    document: ($) => optional($.statement_list),

    statement_list: ($) => seq($.statement, repeat(seq(";", $.statement)), optional(";")),

    line_comment: ($) => token(seq("//", /[^\n]*/)),

    block_comment: ($) =>
      seq(
        "/*",
        repeat(
          choice(
            /[^/*]+/,
            /\/[^*]/,
            /\*[^/]/,
            $.block_comment,
          ),
        ),
        "*/",
      ),

    attribute_list: ($) => repeat1($.attribute),

    attribute: ($) =>
      seq(
        "@",
        field("name", $.lower_identifier),
        optional(field("arguments", $.attribute_arguments)),
      ),

    attribute_arguments: ($) =>
      seq("(", optional(commaSep1($.expression)), optional(","), ")"),

    function_declaration: ($) =>
      seq(
        optional(field("attributes", $.attribute_list)),
        "fn",
        field("name", $.lower_identifier),
        optional(field("type_parameters", $.type_parameter_list)),
        field("parameters", $.parameter_clause),
        optional(field("return_type", $.return_type)),
        optional(field("body", $.block)),
      ),

    type_declaration: ($) =>
      seq(
        optional(field("attributes", $.attribute_list)),
        field("name", $.upper_identifier),
        "=",
        field(
          "value",
          choice(
            $.struct_type_definition,
            $.enum_type_definition,
            $.newtype_type_definition,
            $.sum_type_definition,
          ),
        ),
      ),

    struct_type_definition: ($) => seq("struct", field("body", $.struct_type_body)),

    struct_type_body: ($) =>
      seq("{", optional(commaSep1($.struct_field_declaration)), optional(","), "}"),

    struct_field_declaration: ($) =>
      seq(
        optional(field("attributes", $.attribute_list)),
        field("name", $.lower_identifier),
        ":",
        field("type", $.type_expression),
        optional(
          seq(
            "=",
            field(
              "value",
              choice(
                $.struct_type_definition,
                $.enum_type_definition,
                $.newtype_type_definition,
                $.expression,
              ),
            ),
          ),
        ),
      ),

    enum_type_definition: ($) => seq("enum", field("body", $.enum_type_body)),

    enum_type_body: ($) =>
      seq("{", optional(commaSep1($.enum_variant)), optional(","), "}"),

    enum_variant: ($) =>
      choice(
        seq(
          optional(field("attributes", $.attribute_list)),
          field("name", $.upper_identifier),
          optional(
            choice(
              field("tuple_payload", $.tuple_variant_payload),
              field("struct_payload", $.struct_variant_payload),
              field("alias_payload", $.alias_variant_payload),
            ),
          ),
        ),
        seq(
          optional(field("attributes", $.attribute_list)),
          ":",
          field("alias_type", $.type_expression),
        ),
      ),

    struct_variant_payload: ($) =>
      seq("{", optional(commaSep1($.struct_field_declaration)), optional(","), "}"),

    binding_statement: ($) =>
      seq(
        field("pattern", $.binding_pattern),
        optional(seq(":", field("type", $.type_expression))),
        "=",
        field("value", $.expression),
      ),

    compound_update_statement: ($) =>
      seq(field("name", $.lower_identifier), "with=", field("value", $.update_body)),

    field_assignment_statement: ($) =>
      seq(field("target", $.field_assignment_target), "=", field("value", $.expression)),

    field_assignment_target: ($) => $.field_expression,

    return_statement: ($) => seq("return", optional($.expression)),

    parameter_clause: ($) => seq("(", optional(commaSep1($.parameter_item)), optional(","), ")"),

    parameter_item: ($) => choice($.parameter, $.keyword_parameter_group),

    parameter: ($) => seq(field("pattern", $.binding_pattern), ":", field("type", $.type_expression)),

    keyword_parameter: ($) =>
      seq(
        field("name", $.lower_identifier),
        ":",
        field("type", $.type_expression),
        optional(seq("=", field("default", $.expression))),
      ),

    return_type: ($) => seq("->", $.type_expression),

    type_parameter_list: ($) =>
      seq("[", optional(commaSep1($.type_parameter)), optional(","), "]"),

    type_parameter: ($) => $.upper_identifier,

    tuple_type: ($) =>
      seq("(", commaSep1($.type_expression), optional(","), ")"),

    function_type: ($) =>
      seq(
        "Fn",
        "(",
        optional(commaSep1($.type_expression)),
        optional(","),
        ")",
        optional($.capability_list),
        "->",
        $.type_expression,
      ),

    type_path: ($) =>
      prec.left(
        seq(
          field("head", $.upper_identifier),
          repeat(seq(".", field("member", $.upper_identifier))),
          optional(field("type_arguments", $.type_arguments)),
        ),
      ),

    type_arguments: ($) => seq("[", optional(commaSep1($.type_expression)), optional(","), "]"),

    binding_pattern: ($) =>
      choice(
        $.wildcard_pattern,
        $.lower_identifier,
        $.tuple_pattern,
        $.struct_pattern,
        $.array_pattern,
        $.parenthesized_pattern,
      ),

    wildcard_pattern: ($) => "_",

    struct_pattern: ($) =>
      seq("{", optional(commaSep1($.struct_pattern_field)), optional(","), "}"),

    struct_pattern_field: ($) =>
      choice(
        seq(field("name", $.lower_identifier), ":", field("pattern", $.pattern)),
        field("name", $.lower_identifier),
        prec(20, ".."),
      ),

    array_pattern: ($) =>
      seq("[", optional(commaSep1($.array_pattern_item)), optional(","), "]"),

    array_pattern_item: ($) =>
      choice($.pattern, $.array_rest_pattern),

    array_rest_pattern: ($) => prec(20, choice("..", seq("..", $.lower_identifier))),

    variant_pattern: ($) =>
      prec.right(
        seq(
          field("name", choice($.type_path, $.upper_identifier)),
          optional(choice($.tuple_pattern, $.struct_pattern)),
        ),
      ),

    primary_expression: ($) =>
      choice(
        $.identifier_expression,
        $.integer_literal,
        $.float_literal,
        $.boolean_literal,
        $.string_literal,
        $.interpolated_string,
        $.array_expression,
        $.map_expression,
        $.tuple_expression,
        $.parenthesized_expression,
        $.block,
        $.import_expression,
        $.fail_expression,
        $.dollar_identifier,
      ),

    identifier_expression: ($) => choice($.lower_identifier, $.upper_identifier),

    integer_literal: ($) => /\d(?:[\d_]*\d)?/,

    boolean_literal: ($) => choice("true", "false"),

    string_literal: ($) =>
      seq(
        "\"",
        repeat(choice($.escape_sequence, alias(token.immediate(/[^"\\\n]+/), $.string_content))),
        "\"",
      ),

    tuple_expression: ($) =>
      seq("(", commaSep1(choice($.expression, $.spread_expression)), optional(","), ")"),

    block: ($) => seq("{", optional($.statement_list), "}"),

    array_expression: ($) =>
      seq("[", optional(commaSep1(choice($.expression, $.spread_expression))), optional(","), "]"),

    update_body: ($) => seq("{", optional(commaSep1($.update_field)), optional(","), "}"),

    update_field: ($) =>
      choice(
        seq(field("path", $.field_path), ":", field("value", $.expression)),
        seq(":", field("shorthand", $.field_path), "with", field("value", $.update_body)),
        seq("..", field("spread", $.expression)),
      ),

    field_path: ($) =>
      seq($.lower_identifier, repeat(seq(".", $.lower_identifier))),

    index_expression: ($) =>
      prec.left(PREC.call, seq(field("value", $.expression), "[", field("index", $.expression), "]")),

    field_expression: ($) =>
      prec.left(
        PREC.field,
        seq(
          field("value", $.expression),
          ".",
          field("field", choice($.lower_identifier, $.upper_identifier, $.tuple_index)),
        ),
      ),

    if_expression: ($) =>
      prec.right(
        seq(
          "if",
          field("condition", $.expression),
          field("consequence", $.block),
          optional(field("alternative", $.else_clause)),
        ),
      ),

    else_clause: ($) => seq("else", choice($.if_expression, $.block)),

    match_expression: ($) =>
      seq("match", field("value", $.expression), "{", optional(commaSep1($.match_arm)), optional(","), "}"),

    match_arm: ($) =>
      seq(
        field("pattern", $.pattern),
        optional(seq("if", field("guard", $.expression))),
        "=>",
        field("value", $.expression),
      ),

    comparison_expression: ($) =>
      prec.left(PREC.comparison, seq($.expression, choice("<", "<=", ">", ">="), $.expression)),

    additive_expression: ($) =>
      prec.left(PREC.additive, seq($.expression, choice("+", "-"), $.expression)),

    closure_parameter_clause: ($) =>
      seq("(", optional(commaSep1($.binding_pattern)), optional(","), ")"),

    arrow_closure: ($) =>
      prec.right(seq(field("parameters", $.closure_parameter_clause), "=>", field("body", $.expression))),

    dollar_identifier: ($) => /\$[0-9]*/,

    lower_identifier: ($) => /[a-z_][A-Za-z0-9_]*/,

    upper_identifier: ($) => /[A-Z][A-Za-z0-9_]*/,
  },
});

function commaSep1(rule) {
  return seq(rule, repeat(seq(",", rule)));
}
