crates/tree-sitter-vixen/test/corpus/calls.txt
================================================================================
Unary application and keyword application
================================================================================

fn demo(
  compile: Fn(String) -> String,
  exec: Fn(Array[String]) -> String,
  src: String,
  cc: String,
  file: String,
  defaults: Config,
) -> String {
  compile src where { optimize: true, loudly: true };
  compile src where defaults;
  exec [cc, "-c", file] where { ..defaults, mounts: src }
}

--------------------------------------------------------------------------------

(document
  (function_declaration
    (lower_identifier)
    (parameter_clause
      (parameter_list
        (parameter
          (binding_pattern
            (lower_identifier))
          (slot_type
            (type_primary
              (function_type
                (type_primary
                  (type_path
                    (upper_identifier)))
                (type_primary
                  (type_path
                    (upper_identifier)))))))
        (parameter
          (binding_pattern
            (lower_identifier))
          (slot_type
            (type_primary
              (function_type
                (type_primary
                  (type_path
                    (upper_identifier)
                    (type_arguments
                      (type_primary
                        (type_path
                          (upper_identifier))))))
                (type_primary
                  (type_path
                    (upper_identifier)))))))
        (parameter
          (binding_pattern
            (lower_identifier))
          (slot_type
            (type_primary
              (type_path
                (upper_identifier)))))
        (parameter
          (binding_pattern
            (lower_identifier))
          (slot_type
            (type_primary
              (type_path
                (upper_identifier)))))
        (parameter
          (binding_pattern
            (lower_identifier))
          (slot_type
            (type_primary
              (type_path
                (upper_identifier)))))
        (parameter
          (binding_pattern
            (lower_identifier))
          (slot_type
            (type_primary
              (type_path
                (upper_identifier)))))))
    (return_type
      (type_primary
        (type_path
          (upper_identifier))))
    (block
      (statement_list
        (keyword_application_expression
          (application_expression
            (primary_expression
              (identifier_expression
                (lower_identifier)))
            (primary_expression
              (identifier_expression
                (lower_identifier))))
          (record_expression
            (record_field
              (lower_identifier)
              (primary_expression
                (boolean_literal)))
            (record_field
              (lower_identifier)
              (primary_expression
                (boolean_literal)))))
        (keyword_application_expression
          (application_expression
            (primary_expression
              (identifier_expression
                (lower_identifier)))
            (primary_expression
              (identifier_expression
                (lower_identifier))))
          (primary_expression
            (identifier_expression
              (lower_identifier))))
        (keyword_application_expression
          (application_expression
            (primary_expression
              (identifier_expression
                (lower_identifier)))
            (primary_expression
              (array_expression
                (primary_expression
                  (identifier_expression
                    (lower_identifier)))
                (primary_expression
                  (string_literal
                    (string_content)))
                (primary_expression
                  (identifier_expression
                    (lower_identifier))))))
          (record_expression
            (record_field
              (primary_expression
                (identifier_expression
                  (lower_identifier))))
            (record_field
              (lower_identifier)
              (primary_expression
                (identifier_expression
                  (lower_identifier))))))))))

================================================================================
Tuple and array payload application
================================================================================

fn demo(
  pairer: Fn((U64, U64)) -> U64,
  lister: Fn(Array[U64]) -> U64,
  next: Fn(U64) -> Fn(U64) -> U64,
  x: U64,
  y: U64,
) -> U64 {
  pairer (x, y);
  lister [x, y];
  next x y
}

--------------------------------------------------------------------------------

(document
  (function_declaration
    (lower_identifier)
    (parameter_clause
      (parameter_list
        (parameter
          (binding_pattern
            (lower_identifier))
          (slot_type
            (type_primary
              (function_type
                (type_primary
                  (tuple_type
                    (type_primary
                      (type_path
                        (upper_identifier)))
                    (type_primary
                      (type_path
                        (upper_identifier)))))
                (type_primary
                  (type_path
                    (upper_identifier)))))))
        (parameter
          (binding_pattern
            (lower_identifier))
          (slot_type
            (type_primary
              (function_type
                (type_primary
                  (type_path
                    (upper_identifier)
                    (type_arguments
                      (type_primary
                        (type_path
                          (upper_identifier))))))
                (type_primary
                  (type_path
                    (upper_identifier)))))))
        (parameter
          (binding_pattern
            (lower_identifier))
          (slot_type
            (type_primary
              (function_type
                (type_primary
                  (type_path
                    (upper_identifier)))
                (type_primary
                  (function_type
                    (type_primary
                      (type_path
                        (upper_identifier)))
                    (type_primary
                      (type_path
                        (upper_identifier)))))))))
        (parameter
          (binding_pattern
            (lower_identifier))
          (slot_type
            (type_primary
              (type_path
                (upper_identifier)))))
        (parameter
          (binding_pattern
            (lower_identifier))
          (slot_type
            (type_primary
              (type_path
                (upper_identifier)))))))
    (return_type
      (type_primary
        (type_path
          (upper_identifier))))
    (block
      (statement_list
        (application_expression
          (primary_expression
            (identifier_expression
              (lower_identifier)))
          (primary_expression
            (tuple_expression
              (primary_expression
                (identifier_expression
                  (lower_identifier)))
              (primary_expression
                (identifier_expression
                  (lower_identifier))))))
        (application_expression
          (primary_expression
            (identifier_expression
              (lower_identifier)))
          (primary_expression
            (array_expression
              (primary_expression
                (identifier_expression
                  (lower_identifier)))
              (primary_expression
                (identifier_expression
                  (lower_identifier))))))
        (application_expression
          (application_expression
            (primary_expression
              (identifier_expression
                (lower_identifier)))
            (primary_expression
              (identifier_expression
                (lower_identifier))))
          (primary_expression
            (identifier_expression
              (lower_identifier))))))))

================================================================================
Keyword-only parameter list
================================================================================

fn connect(; host: String, port: U64 = 80) -> String {
  host
}

--------------------------------------------------------------------------------

(document
  (function_declaration
    (lower_identifier)
    (parameter_clause
      (keyword_parameter_section
        (keyword_parameter
          (lower_identifier)
          (slot_type
            (type_primary
              (type_path
                (upper_identifier)))))
        (keyword_parameter
          (lower_identifier)
          (slot_type
            (type_primary
              (type_path
                (upper_identifier))))
          (primary_expression
            (integer_literal)))))
    (return_type
      (type_primary
        (type_path
          (upper_identifier))))
    (block
      (statement_list
        (primary_expression
          (identifier_expression
            (lower_identifier)))))))
