crates/tree-sitter-vixen/test/corpus/calls_and_closures_more.txt
================================================================================
Method chain with postfix invocation
================================================================================

fn value(items: Array[U64]) -> Array[U64] {
  items.map ($ + 1).filter ($ > 3).to_array!
}

--------------------------------------------------------------------------------

(document
  (function_declaration
    (lower_identifier)
    (parameter_clause
      (parameter_list
        (parameter
          (binding_pattern
            (lower_identifier))
          (slot_type
            (type_primary
              (type_path
                (upper_identifier)
                (type_arguments
                  (type_primary
                    (type_path
                      (upper_identifier))))))))))
    (return_type
      (type_primary
        (type_path
          (upper_identifier)
          (type_arguments
            (type_primary
              (type_path
                (upper_identifier)))))))
    (block
      (statement_list
        (application_expression
          (application_expression
            (field_expression
              (primary_expression
                (identifier_expression
                  (lower_identifier)))
              (lower_identifier))
            (field_expression
              (primary_expression
                (tuple_expression
                  (additive_expression
                    (primary_expression
                      (dollar_identifier))
                    (primary_expression
                      (integer_literal)))))
              (lower_identifier)))
          (invocation_expression
            (field_expression
              (primary_expression
                (tuple_expression
                  (comparison_expression
                    (primary_expression
                      (dollar_identifier))
                    (primary_expression
                      (integer_literal)))))
              (lower_identifier))))))))

================================================================================
Arrow closure block body
================================================================================

fn value(items: Array[U64]) -> Array[U64] {
  items.map ((item) => {
    let next = item + 1;
    next
  })
}

--------------------------------------------------------------------------------

(document
  (function_declaration
    (lower_identifier)
    (parameter_clause
      (parameter_list
        (parameter
          (binding_pattern
            (lower_identifier))
          (slot_type
            (type_primary
              (type_path
                (upper_identifier)
                (type_arguments
                  (type_primary
                    (type_path
                      (upper_identifier))))))))))
    (return_type
      (type_primary
        (type_path
          (upper_identifier)
          (type_arguments
            (type_primary
              (type_path
                (upper_identifier)))))))
    (block
      (statement_list
        (application_expression
          (field_expression
            (primary_expression
              (identifier_expression
                (lower_identifier)))
            (lower_identifier))
          (primary_expression
            (tuple_expression
              (arrow_closure
                (closure_parameter_clause
                  (binding_pattern
                    (lower_identifier)))
                (primary_expression
                  (block
                    (statement_list
                      (binding_statement
                        (binding_pattern
                          (lower_identifier))
                        (additive_expression
                          (primary_expression
                            (identifier_expression
                              (lower_identifier)))
                          (primary_expression
                            (integer_literal))))
                      (primary_expression
                        (identifier_expression
                          (lower_identifier))))))))))))))

================================================================================
Numbered dollar shorthand
================================================================================

fn value(items: Array[U64]) -> U64 {
  items.reduce ($0 + $1)
}

--------------------------------------------------------------------------------

(document
  (function_declaration
    (lower_identifier)
    (parameter_clause
      (parameter_list
        (parameter
          (binding_pattern
            (lower_identifier))
          (slot_type
            (type_primary
              (type_path
                (upper_identifier)
                (type_arguments
                  (type_primary
                    (type_path
                      (upper_identifier))))))))))
    (return_type
      (type_primary
        (type_path
          (upper_identifier))))
    (block
      (statement_list
        (application_expression
          (field_expression
            (primary_expression
              (identifier_expression
                (lower_identifier)))
            (lower_identifier))
          (primary_expression
            (tuple_expression
              (additive_expression
                (primary_expression
                  (dollar_identifier))
                (primary_expression
                  (dollar_identifier))))))))))

================================================================================
Pipe placeholder
================================================================================

fn value(ar: String, ranlib: String) -> String {
  cexec [ar] |> cexec [ranlib, _]
}

--------------------------------------------------------------------------------

(document
  (function_declaration
    (lower_identifier)
    (parameter_clause
      (parameter_list
        (parameter
          (binding_pattern
            (lower_identifier))
          (slot_type
            (type_primary
              (type_path
                (upper_identifier)))))
        (parameter
          (binding_pattern
            (lower_identifier))
          (slot_type
            (type_primary
              (type_path
                (upper_identifier)))))))
    (return_type
      (type_primary
        (type_path
          (upper_identifier))))
    (block
      (statement_list
        (pipe_expression
          (application_expression
            (primary_expression
              (identifier_expression
                (lower_identifier)))
            (primary_expression
              (array_expression
                (primary_expression
                  (identifier_expression
                    (lower_identifier))))))
          (application_expression
            (primary_expression
              (identifier_expression
                (lower_identifier)))
            (primary_expression
              (array_expression
                (primary_expression
                  (identifier_expression
                    (lower_identifier)))
                (primary_expression
                  (pipe_placeholder))))))))))

================================================================================
Zero-arg method invocation
================================================================================

fn value(blob: Blob) -> String {
  blob.utf8!.trim!
}

--------------------------------------------------------------------------------

(document
  (function_declaration
    (lower_identifier)
    (parameter_clause
      (parameter_list
        (parameter
          (binding_pattern
            (lower_identifier))
          (slot_type
            (type_primary
              (type_path
                (upper_identifier)))))))
    (return_type
      (type_primary
        (type_path
          (upper_identifier))))
    (block
      (statement_list
        (invocation_expression
          (field_expression
            (invocation_expression
              (field_expression
                (primary_expression
                  (identifier_expression
                    (lower_identifier)))
                (lower_identifier)))
            (lower_identifier)))))))
